# Updater

./: README.md
UpdaterClient/: .gitignore  CMakeLists.txt
UpdaterClient/src/: ArrayList.c  ArrayList.h  FileSystem.c  FileSystem.h  Main.c  NetworkSystem.c  NetworkSystem.h  cJSON.c  dirent.h
UpdaterServer/: .gitignore  CMakeLists.txt  README.md
UpdaterServer/src/: ArrayList.c  ArrayList.h  FileSystem.c  FileSystem.h  Main.c  NetworkSystem.c  NetworkSystem.h  Test.c
